{
    "name": "Controls for Player",
    "maps": [
        {
            "name": "Inv",
            "id": "fd34008b-80e7-426d-97d4-7c82c44f2dfd",
            "actions": [
                {
                    "name": "Store",
                    "type": "Value",
                    "id": "fd1e9d33-dc43-4419-b81d-74f46283fac0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=1)",
                    "initialStateCheck": true
                },
                {
                    "name": "Drop",
                    "type": "Button",
                    "id": "5ed0ff00-4926-4efc-a969-e399a0c91f33",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                },
                {
                    "name": "PressPick",
                    "type": "Button",
                    "id": "137fa85d-f5ab-4b53-b7f3-1da9092e75c7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                },
                {
                    "name": "HoldItem",
                    "type": "Button",
                    "id": "e3efaabd-f84c-4644-914b-028932e17948",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "249f10df-dcd2-4d2a-b7a2-a5310ed10354",
                    "path": "<Keyboard>/e",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "Store",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c2d68109-9b48-4f39-8328-bd265a513646",
                    "path": "<XInputController>/buttonWest",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "Store",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "25af452b-f432-46da-8bd2-79f6244aeeed",
                    "path": "<XInputController>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1442667d-a526-4eb4-9b71-7e1666b28729",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Drop",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0b4d538b-bf56-4a9f-a01a-eb3b48c54349",
                    "path": "<XInputController>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Drop",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ad86e4db-23c8-4aac-9036-2eff151e3b10",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PressPick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2643c2af-f640-46b5-b5a6-51cfe754008e",
                    "path": "<XInputController>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PressPick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c6d45c2d-d454-4498-bf21-9142a5e2efa1",
                    "path": "<Keyboard>/r",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "HoldItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Actions",
            "id": "e0f5a95b-511f-4b07-a28e-fa89eb759e3c",
            "actions": [
                {
                    "name": "Glide",
                    "type": "Button",
                    "id": "81c37c7b-46ca-44df-89ad-1757458b57c2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=1)",
                    "initialStateCheck": false
                },
                {
                    "name": "Dive",
                    "type": "Button",
                    "id": "63fb4c82-2fc1-4970-b6bb-fca2cb8c73b7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                },
                {
                    "name": "GlideLeft",
                    "type": "Button",
                    "id": "e8203e8b-3fc1-4b66-9508-615a9eb92162",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GlideRight",
                    "type": "Button",
                    "id": "2fca163b-c2dd-47df-ba3f-2bfd8aa1c8de",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "76884bb7-09ba-4323-a932-4b7fb3bddc23",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(pressPoint=0.1)",
                    "initialStateCheck": true
                },
                {
                    "name": "SwitchHat",
                    "type": "Button",
                    "id": "72f8dc6b-8a82-445e-92db-761c708e2da6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ActivateHat",
                    "type": "Button",
                    "id": "740d3fcf-da47-42bd-a6e4-47e15688a7ba",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Snatch",
                    "type": "Button",
                    "id": "b40ae7e6-5c86-407a-b90e-eb9073176aa7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "33451d84-4d40-4673-9264-327a2b73831d",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Glide",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e3f384f7-5b85-414e-9d19-d2cbe32beefc",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Glide",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c984d088-ea9b-4b9b-9b66-f62508c13fdd",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dive",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b58d955c-5a18-4026-a2c1-1c5a60bb0841",
                    "path": "<XInputController>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dive",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "90ac33f5-f896-4b4f-8a80-74b6d8058514",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GlideLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bc2caacf-93cc-450a-824a-6ee2566ecbad",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GlideRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0c464499-e9c0-47ea-8958-9a0e57b1061f",
                    "path": "<Keyboard>/space",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "751dfeb3-4ff1-4aa4-bb26-14ea9e2f36fe",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchHat",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ae0f4c6d-4ab1-4576-99c2-030cf45b3344",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ActivateHat",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6e384cb0-76c0-4b1a-98a4-167984a63b59",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Snatch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Test",
            "id": "16c4472a-5611-435b-835b-4a121f3e8be4",
            "actions": [
                {
                    "name": "HealthTest",
                    "type": "Button",
                    "id": "1036cb9b-5a91-4891-9e58-cf4c70636b63",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1a7e2700-2a7e-4bc0-a937-dd0c5b317dec",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HealthTest",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MenuActions",
            "id": "a63f8fe0-889c-4137-8c17-e1bcc6f113c0",
            "actions": [
                {
                    "name": "Quit",
                    "type": "Button",
                    "id": "f4f45f2f-7dc5-4d03-a2b2-2608f83357d7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Save",
                    "type": "Button",
                    "id": "0d5e2f9a-d6a5-4805-80d9-2b40e0a9e814",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Load",
                    "type": "Button",
                    "id": "5419be73-8de7-4cb5-a789-c1075c3ff696",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d5c1561a-0d3d-4241-8e65-4ed34889849d",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Quit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6665efec-9ac3-4b69-97b0-1935fcf43bc4",
                    "path": "<Keyboard>/leftBracket",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Save",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5fae1183-4b34-49fd-9969-063e9ed8b138",
                    "path": "<Keyboard>/slash",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Load",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}